# my-competitive-pg

./: .gitignore  Algorithm_Hierarchy.xml  README.md  Untitled Diagram.xml  begin-pg.sh
CompeteAI/: LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
CompeteAI/src/CompeteAI/: __init__.py  _version.py  app.py  utils.py
CompeteAI/src/CompeteAI/domain/agents/: coder_agent.py  knowledge_provider_agent.py  problem_analyzing_agent.py  problem_solver_agent.py  problem_solving_agent.py  tester_agent.py
CompeteAI/src/CompeteAI/domain/factory/: llm_factory.py
CompeteAI/src/CompeteAI/domain/models/: algorithm_candidate.py  llm_type.py  node.py  problem_statement.py  source_code.py  test_case.py
CompeteAI/src/CompeteAI/domain/tools/: algorithm_strategy_tool.py
CompeteAI/src/CompeteAI/domain/usecase/: mcts.py
CompeteAI/src/CompeteAI/infra/memory/: memory.py
CompeteAI/src/CompeteAI/interface_adapter/: stream_handler.py
CompeteAI/src/CompeteAI/services/: agent_service.py
CompeteAI/tests/: test_app.py  test_utils.py
CompeteAI/tests/domain/agents/: coder_agent_test.py
algorithm/: coin_changing_1dim.rb  coin_changing_2dim.rb  coin_changing_2dim_reduced.rb  coin_changing_combination.rb  combination-cumsum.rb  combination-mod_inverse.rb  combination-naive.rb  cumulative_sum_2d.rb  digit_db.rb  doubling.rb  erastosthenes.rb  fenwick_tree.rb  fenwick_tree_bs.rb  fib.rb  lis_bsearch.rb  lis_linear.rb  lsb.rb  parenthesis_balanced.rb  prio.rb
atcoder/: begin.sh  check.rb  dlang.txt
(+343 files in other folders)
