[project]
name = "CompeteAI"
version = "0.1.0"
description = "An interactive environment for competitive programming using LLM"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "hangingman", email="idiotpanzer@gmail.com" },
]

[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
optional-dependencies.dev = { file = ["requirements-dev.in"] }

[tool.setuptools.packages.find]
where = ["src"]